# nfrx-asr-worker

./: .gitignore  Makefile  README.md  com.l3ia.lavery.nfrx-asr-worker.plist  pyproject.toml  requirements.txt
nfrx/: example_nfrx_jobs_client.py  example_nfrx_jobs_worker.py  example_nfrx_transfer.py
nfrx/nfrx_sdk/: __init__.py  transfer_client.py
tests/: test_audio_buffer.py  test_chunk_alignment.py  test_speaker_embeddings.py
transcribe/: __init__.py  audio.py  speaker_embeddings.py  worker.py
