[project]
name = "nfrx-asr-worker"
version = "0.1.0"
description = "NFRX ASR transcribe worker using faster-whisper and in-memory ffmpeg decoding."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "httpx>=0.27.0",
  "faster-whisper>=1.1.1",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.1",
  "verbatim[diarization]>=1.2.2",
]

[project.scripts]
transcribe-worker = "transcribe.worker:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transcribe"]

[dependency-groups]
dev = []

[tool.uv]
package = true
