[project]
name = "nfrx-asr-worker"
version = "0.1.0"
description = "NFRX ASR transcribe worker using faster-whisper and in-memory ffmpeg decoding."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "av>=12.0.0",
  "httpx>=0.27.0",
  "faster-whisper>=1.1.1",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.1",
  "scipy>=1.11.0",
  "speechbrain>=1.0.3",
]

[project.optional-dependencies]
verbatim = [
  "verbatim[diarization]>=1.3.3",
]
mlx = [
  "mlx-audio>=0.4.1 ; sys_platform == 'darwin'",
]

[project.scripts]
transcribe-worker = "transcribe.worker:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transcribe"]

[dependency-groups]
dev = []

[tool.uv]
package = true
environments = ["python_full_version < '3.13' or sys_platform != 'win32'"]
